2000-06-20 11:15 GMT+1 Antonio Linares <alinares@fivetech.com>
   * include/hbclass.ch
      * small fix for SETGET methods
      * small fix for CLASSDATA shared attributes

2000-06-19 23:35 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/hbgenerr.c
   * source/pp/ppcomp.c
     ! Fixed reporting of line numbers on errors.

   * source/pp/ppcore.c
     * More support for [] as string delimiters.

   * source/compiler/harbour.l
     + Added support for:
        ELSIF [ some string ] ...
        DO WHILE [ some string ] ...
        WHILE [ some string ] ...
        CASE [ some string ] ...

     /* Strangley, Clipper chockes on elseif [...] */

2000-06-19 23:05 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbdoc/genhtm.prg
     utils/hbdoc/genchm.prg
     utils/hbdoc/html.pg
     utils/hbdoc/genng.prg
   * utils/hbdoc/genos2.prg
     utils/hbdoc/os2.prg
     * Small Fixes
   *doc/en/string.txt
        + Transform() function documentation
   *doc/en/array.txt
    doc/en/browse.txt
    doc/en/lang.txt
    doc/en/nation.txt
       *Changed the case of Category section t

20000619-23:08 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/lang/msgit.c
     * converted new template to italian

20000619-21:44 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * harbour/source/rtl/filesys.c
     % rewritten hb_fsSeek() to use native OS/2 api call (DosSetFilePtr()); This change is not needed, I've made it
       while hunting a bug and could (should ?, will ?) be an initial effort to move file apis from EMX/GCC or icc
       runtime to native system calls.
   * harbour/source/rtl/teditor.prg
     + added a couple unfinished methods, will complete them later
   * harbour/source/rtl/teditorl.c
     ! fixed a bug inside __StrTkPtr(), I really don't understand why it didn't show up before :-)

2000-06-19 10:11 UTC+0100 Victor Szakats <info@szelvesz.hu>

   * include/hbapigt.h
   * include/gt.api
   + source/rtl/gtapiu.c