@@ -995,7 +995,7 @@ int hb_pp_ParseExpression( char * sLine, char * sOutLine )
                   HB_SKIPTABSPACES( ptri );
 
                   if( ( *ptri == '\0' || ( *ptri != '=' &&
-                                            (!IsInStr(*ptri,":/*+-%^") || *(ptri+1) != '=') &&
+                                            (!IsInStr(*ptri,":/+*-%^") || *(ptri+1) != '=') &&
                                             ( *ptri != '-' || *(ptri+1) != '>' ) ) )
                        && ( stcmd = ComSearch(sToken,NULL) ) != NULL )
                     {
@@ -1854,7 +1854,7 @@ static int getExpReal( char * expreal, char ** ptri, BOOL prlist, int maxrez )
                StBr2++;
                State = STATE_BRACKET;
             }
-            /* Ron Pinkas end 2000-06-17 */
+            Ron Pinkas end 2000-06-17 */
             else if( **ptri == '{' )
             {
                StBr3++;
@@ -1934,10 +1934,10 @@ static BOOL isExpres( char * stroka )
   printf( "Len1: %i Len2: %i RealExp: >%s< Last: %c\n", l1, l2, stroka - l2, ( stroka - l2 )[l1-1] );
   */
 
-  /* Ron Pinkas modified 2000-06-17 Expression can't be valid if last charcter is one of these: ":/*+-%^=(<>"
+  /* Ron Pinkas modified 2000-06-17 Expression can't be valid if last charcter is one of these: ":/+*-%^=(<>"
   return ( l1 <= l2 );
   */
-  return ( l1 <= l2 && ! IsInStr( ( stroka - l2 )[l1-1], ":/*+-%^=(<>[{" ) );
+  return ( l1 <= l2 && ! IsInStr( ( stroka - l2 )[l1-1], ":/+*-%^=(<>[{" ) );
 }
 
 static BOOL TestOptional( char *ptr1, char *ptr2 )
