@@ -1,3 +1,7 @@
+2000-06-20 08:45 UTC-0800 Ron Pinkas <Ron@Profit-Master.com>
+   * source/pp/ppcore.c
+     * Removed some /* reported as nested comments
+
 2000-06-20 11:15 GMT+1 Antonio Linares <alinares@fivetech.com>
    * include/hbclass.ch
       * small fix for SETGET methods
